tests/paczka1/fuzzy1/22043731.err
Error in line 14: nmLVMnzGJVW A426 90,7
Error in line 9: S889 A156 6,1
Error in line 37: jUVHwqNk6tP A404 89,40
